--- a/policyengine-client/src/style/policyengine.less
+++ b/policyengine-client/src/style/policyengine.less
@@ -1,3 +1,5 @@
+@import "../../node_modules/antd/dist/antd.less";
+
 .ant-tabs-top > .ant-tabs-nav::before {
     border-bottom: none;
 }
@@ -60,4 +62,8 @@ body {
 
 .ant-table-expanded-row > .ant-table-cell {
     padding-left: 0px !important;
+}
+
+.ant-tabs-top > .ant-tabs-nav {
+    margin: 0 !important;
 }
