--- a/policyengine-client/src/style/policyengine.less
+++ b/policyengine-client/src/style/policyengine.less
@@ -10,6 +10,7 @@
 
 .ant-tabs-tab {
     padding-bottom: 5px;
+    padding-top: 5px;
 }
 
 .ant-tabs-tab div {
@@ -66,4 +67,8 @@ body {
 
 .ant-tabs-top > .ant-tabs-nav {
     margin: 0 !important;
+}
+
+.ant-page-header-heading-title {
+    line-height: 0px;
 }
