--- a/policyengine-client/src/style/policyengine.less
+++ b/policyengine-client/src/style/policyengine.less
@@ -72,3 +72,11 @@ body {
 .ant-page-header-heading-title {
     line-height: 0px;
 }
+
+.ant-table-tbody > tr > td > .ant-table-wrapper:only-child .ant-table, .ant-table-tbody > tr > td > .ant-table-expanded-row-fixed > .ant-table-wrapper:only-child .ant-table {
+    margin-left: 0px !important;
+}
+
+.ant-table-expanded-row > .ant-table-cell {
+    padding-left: 0px !important;
+}
