Ensure UK and US household pages work

--- a/policyengine-client/src/style/policyengine.less
+++ b/policyengine-client/src/style/policyengine.less
@@ -5,6 +5,11 @@
 
 @import "../../node_modules/antd/dist/antd.less";
 
+.ant-table-cell {
+    padding-right: 0 !important;
+    padding-left: 0 !important;
+}
+
 .ant-tabs-top > .ant-tabs-nav::before {
     border-bottom: none;
 }
