--- a/policyengine-client/src/style/policyengine.less
+++ b/policyengine-client/src/style/policyengine.less
@@ -42,7 +42,7 @@ svg { margin-bottom: 5px;}
 }
 
 body {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+    font-family: "Ubuntu", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
