--- a/policyengine-client/src/style/policyengine.less
+++ b/policyengine-client/src/style/policyengine.less
@@ -4,6 +4,7 @@
 */
 
 @import "../../node_modules/antd/dist/antd.less";
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu');
 
 .ant-table-cell {
     padding-right: 0 !important;
