Adjust frontpage layout fixes #616

--- a/policyengine-client/src/style/policyengine.less
+++ b/policyengine-client/src/style/policyengine.less
@@ -11,7 +11,7 @@
     padding-left: 0 !important;
 }
 
-.ant-tabs-top > .ant-tabs-nav::before {
+.ant-tabs-top>.ant-tabs-nav::before {
     border-bottom: none;
 }
 
@@ -36,7 +36,9 @@
     color: #fff !important;
 }
 
-svg { margin-bottom: 5px;}
+svg {
+    margin-bottom: 5px;
+}
 
 .ant-switch-checked.switch-red {
     background-color: #ee0000 !important;
@@ -68,18 +70,39 @@ body {
     max-width: 200px !important;
 }
 
-.ant-table-tbody > tr > td > .ant-table-wrapper:only-child .ant-table, .ant-table-tbody > tr > td > .ant-table-expanded-row-fixed > .ant-table-wrapper:only-child .ant-table {
+.ant-table-tbody>tr>td>.ant-table-wrapper:only-child .ant-table,
+.ant-table-tbody>tr>td>.ant-table-expanded-row-fixed>.ant-table-wrapper:only-child .ant-table {
     margin-left: 0px !important;
 }
 
-.ant-table-expanded-row > .ant-table-cell {
+.ant-table-expanded-row>.ant-table-cell {
     padding-left: 0px !important;
 }
 
-.ant-tabs-top > .ant-tabs-nav {
+.ant-tabs-top>.ant-tabs-nav {
     margin: 0 !important;
 }
 
 .ant-page-header-heading-title {
     line-height: 0px;
+}
+
+h1 {
+    color: #002766;
+}
+
+h2 {
+    color: #002766;
+}
+
+h4 {
+    color: gray;
+}
+
+h5 {
+    color: gray;
+}
+
+h6 {
+    color: gray;
 }
