upgrade to vite

--- a/policyengine-client/src/style/policyengine.less
+++ b/policyengine-client/src/style/policyengine.less
@@ -3,8 +3,8 @@
     * styling for PolicyEngine's look.
 */
 
+@import (inline) "./google-fonts.css";
 @import "../../node_modules/antd/dist/antd.less";
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu');
 
 .ant-table-cell {
     padding-right: 0 !important;
