markdown imports + better styling

--- a/policyengine-client/src/style/policyengine.less
+++ b/policyengine-client/src/style/policyengine.less
@@ -6,6 +6,13 @@
 @import (inline) "./google-fonts.css";
 @import "../../node_modules/antd/dist/antd.less";
 
+.footer {
+    display: flex;
+    justify-content: center;
+    margin: auto;
+    column-gap: 10px;
+}
+
 .ant-table-cell {
     padding-right: 0 !important;
     padding-left: 0 !important;
