--- a/policyengine-client/src/style/policyengine.less
+++ b/policyengine-client/src/style/policyengine.less
@@ -6,6 +6,10 @@
 @import (inline) "./google-fonts.css";
 @import "../../node_modules/antd/dist/antd.less";
 
+// @tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 .footer {
     display: flex;
     justify-content: center;
