add back some defaults

--- a/policyengine-client/src/style/policyengine.less
+++ b/policyengine-client/src/style/policyengine.less
@@ -10,6 +10,17 @@
 @tailwind components;
 @tailwind utilities;
 
+img,
+svg,
+video,
+canvas,
+audio,
+iframe,
+embed,
+object {
+    display: block;
+}
+
 .footer {
     display: flex;
     justify-content: center;
